# meeting-minutes

./: .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE.md  PRIVACY_POLICY.md  PULLREQUEST.md  README.md
backend/: .gitignore  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  Dockerfile.app  README.md  SCRIPTS_DOCUMENTATION.md  build-docker.ps1  build-docker.sh  build_whisper.cmd  build_whisper.sh  check_status.cmd  clean_start_backend.sh  docker-compose.yml  download-ggml-model.cmd  requirements.txt  run-docker.ps1  run-docker.sh  run_build_whisper.ps1  run_clean_start_backend.ps1  setup-db.ps1  setup-db.sh  start_with_output.cmd  start_with_output.ps1  summaries.db  temp.env
backend/app/: Anthropic_transcript.py  Groq_Transcript.py  Ollama_Transcript.py  Process_transcrip.py  db.py  groq_test.py  main.py  schema_validator.py  transcript_processor.py
backend/chroma/: chroma.sqlite3
backend/whisper-server-package/: run-server.sh  whisper-server
docs/: architecture.md
experiment/: .gitignore  API.md  simple_recorder.rs
experiment/rust_based_implementation/: .gitignore  README.md  clean.sh  clean_build.sh  package-lock.json  package.json  pnpm-lock.yaml
experiment/rust_based_implementation/src-tauri/: Cargo.toml  tauri.conf.json
experiment/rust_based_implementation/src-tauri/logs/: meeting-minutes.log.2024-12-30
experiment/rust_based_implementation/src-tauri/src/: lib.rs  main.rs
experiment/rust_based_implementation/src/app/: layout.tsx  metadata.tsx  page.tsx
experiment/rust_based_implementation/src/app/notes/[id]/: page.tsx
experiment/rust_based_implementation/src/app/settings/: page.tsx
experiment/rust_based_implementation/src/components/: EditableTitle.tsx  RecordingControls.tsx
experiment/rust_based_implementation/src/components/AISummary/: Section.tsx  index.tsx
experiment/rust_based_implementation/src/components/MainContent/: index.tsx
experiment/rust_based_implementation/src/hooks/: useAudioPlayer.ts
experiment/rust_based_implementation/src/types/: index.ts
experiment/rust_based_implementation/whisper-server-package/: README.md  run-server.sh
frontend/: .dockerignore  .gitignore  BUG.txt  Dockerfile  README.md  clean_build.sh  clean_build_windows.bat  clean_run.sh  clean_run_windows.bat  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/electron/: main.js  main.mjs  preload.js
frontend/src-tauri/: .gitignore  Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
frontend/src-tauri/icons/: app_icon.icns  icon.icns
frontend/src-tauri/src/: analytics.rs  api.rs  console_utils.rs  lib.rs  main.rs  ollama.rs  utils.rs
frontend/src-tauri/src/audio/: audio_processing.rs  core.rs  encode.rs  mod.rs
frontend/src-tauri/src/audio/src/: audio_processing.rs
frontend/src/app/: globals.css  layout.tsx  metadata.ts  metadata.tsx  page.tsx
frontend/src/app/meeting-details/: page-content.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: About.tsx  AnalyticsConsentSwitch.tsx  AnalyticsProvider.tsx  AudioPlayer.tsx  EditableTitle.tsx  Info.tsx  Logo.tsx  ModelSettingsModal.tsx  RecordingControls.tsx  ServerSettings.tsx  SettingTabs.tsx  TranscriptSettings.tsx  TranscriptView.tsx
frontend/src/components/AISummary/: Block.tsx  Section.tsx  index.tsx
frontend/src/components/Sidebar/: SidebarProvider.tsx  index.tsx
frontend/src/hooks/: useAudioPlayer.ts  useNavigation.ts
frontend/src/lib/: analytics.ts
frontend/src/types/: index.ts  summary.ts
temp_icons/: 1024.icns  128.icns  16.icns  256.icns  32.icns  48.icns  512.icns
(+3 files in other folders)
